manifest/objects/ValorX__App_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>ValorX__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValorX__App__c</fullName>
        <label>App</label>
        <referenceTo>ValorX__App__c</referenceTo>
        <relationshipLabel>App Schedules</relationshipLabel>
        <relationshipName>App_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ValorX__Cron__c</fullName>
        <label>Cron</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValorX__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValorX__Job_ID__c</fullName>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValorX__Max_Number_of_Executions__c</fullName>
        <label>Max Number of Executions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorX__Number_of_Executions__c</fullName>
        <label>Number of Executions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorX__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValorX__Workflow_ID__c</fullName>
        <label>Workflow ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App Schedule</label>
    <nameField>
        <displayFormat>ANS-{000000000}</displayFormat>
        <label>App Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>